--- a/.gitignore
+++ b/.gitignore
@@ -4,16 +4,15 @@
 /radiologists_annotated
 /radiologist_ann_results
 /radiologist_ann_results_separate
-*.zip
 /backup
 /eval_results
 /compressed_files
 /high_scores
+/writing
+# /slides
+# /charts
+/deprecated
 backup.bib
-/generated_bb*
 /CXR+Clinical (fusion1+2)
 *.tex
-/writing
-/slides
-/charts
-/deprecated
+*.zip
